(fix)chatbar issues with top spacing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -80,8 +80,10 @@ button.submit {
   position:absolute;
   margin:15px;
   overflow:scroll;
-  bottom:$navbar-height*2;
-  height:100%;
+  border-top: 10px;
+  top: 5px;
+  width: $chat-width;
+  height:80%;
 }
 .chat-message{
   width:100%;
